--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
 
                     <div class="work__card mix illustrations">
                         <img src="Img/robot ware house.png"  alt="" class="work__img">
-                        <h3 class="services__title">TechroStore</h3>
+                        <h3 class="services__title">PRODUCT SIMULATION AND ANALYSIS</h3>
 
                         <span class="services__button">
                             Preview<i class='bx bxs-chevrons-right services__icon'></i>
@@ -682,41 +682,41 @@
                             <div class="services__modal-content">
                                 <i class='bx bxs-chevrons-left services__modal-close'></i>
 
-                                <h3 class="services__modal-title">TechroStore</h3>
+                                <h3 class="services__modal-title">PRODUCT SIMULATION AND ANALYSIS</h3>
                                 
                                 <ul class="services__modal-list">
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            The model in Blender showcases realistic robotic warehouse elements such as robotic arms providing a visually immersive experience.
+                                            Familiar with Simulation Tools like SolidWorks Simulation.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            The model incorporates a functional layout that demonstrates the flow of goods through the warehouse, highlighting how robotics can streamline logistics and improve efficiency.
+                                            Capable of interpreting simulation results and implementing design optimization.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            It serves as an educational tool for understanding the concepts of automated warehouses, offering insights into how technology can revolutionize modern supply chain management.
+                                             Knowledge of material properties and their impact on product behavior under load.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            The model may include interactive elements, such as animated robotic movements or clickable components, enhancing user engagement and providing a hands-on learning experience.
+                                            Involved in correlating simulation data with physical test results for model validation.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Users can customize the model with additional features or scenarios, such as implementing different warehouse layouts, testing various robotic systems, or simulating specific logistics challenges, making it versatile for educational and experimental purposes.
+                                            Supports DFMEA and risk mitigation through predictive analysis.
                                         </p>
                                     </li>
                                 </ul>
