--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
 
 
                     <div class="work__card mix illustrations">
-                        <img src="Img/robot ware house.png"  alt="" class="work__img">
+                        <img src="Img/PRODUCT SIMULATION AND ANALYSIS.PNG"  alt="" class="work__img">
                         <h3 class="services__title">PRODUCT SIMULATION AND ANALYSIS</h3>
 
                         <span class="services__button">
