--- a/index.html
+++ b/index.html
@@ -779,8 +779,8 @@
                     </div>
 
                     <div class="work__card mix embedded_projects">
-                        <img src="Img/Weld1.png"  alt="" class="work__img">
-                        <h3 class="services__title">Weld Vision</h3>
+                        <img src="Img/PACKAGING THERMOFORMING TRAY.PNG"  alt="" class="work__img">
+                        <h3 class="services__title">PACKAGING THERMOFORMING TRAY</h3>
 
                         <span class="services__button">
                             Preview<i class='bx bxs-chevrons-right services__icon'></i>
@@ -790,41 +790,41 @@
                             <div class="services__modal-content">
                                 <i class='bx bxs-chevrons-left services__modal-close'></i>
 
-                                <h3 class="services__modal-title">Weld Vision</h3>
+                                <h3 class="services__modal-title">PACKAGING THERMOFORMING TRAY</h3>
                                 
                                 <ul class="services__modal-list">
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            The code efficiently scans images to pinpoint flaws like dark spots and brown areas.
+                                            Knowledge of thermoforming process for rigid and semi-rigid packaging trays (HIPS, PET, PVC, etc.).
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Employing advanced techniques like grayscale thresholding and HSV color segmentation, it isolates and marks these imperfections.
+                                            Experience in tool/mold design for forming dies and trim tools.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Precise bounding boxes are drawn around the detected flaws, ensuring accurate identification and localization.
+                                            Understanding of material selection based on product weight, cushioning, and stacking requirements.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            By assigning unique colors to different types of defects (e.g., red for dark spots, brown for brown areas), it enhances clarity.
+                                            Familiar with draft angle, web distribution, plug assist design, and material flow considerations. Involved in prototyping and sampling of trays using CNC or vacuum forming methods.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            It then neatly saves the processed images with highlighted defects for easy reference and analysis.
+                                             Experience in drop test analysis, load testing, and fitment trials for functional validation.
                                         </p>
                                     </li>
                                 </ul>
