--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
                         </div>
                     </div>
 
-                    <div class="work__card mix product_design">
+                    <div class="work__card mix illustrations">
                         <img src="Img/hip2.jpg"  alt="" class="work__img">
                         <h3 class="services__title">Femoral Stem</h3>
 
@@ -994,7 +994,7 @@
                         </div>
                     </div>
 
-                    <div class="work__card mix product_design">
+                    <div class="work__card mix illustrations">
                         <img src="Img/f1.jpg"  alt="" class="work__img">
                         <h3 class="services__title">Graphene Nano-composite</h3>
 
