--- a/index.html
+++ b/index.html
@@ -995,19 +995,28 @@
                     </div>
 
                     <div class="work__card mix illustrations">
-                        <img src="Img/f1.jpg"  alt="" class="work__img">
-                        <h3 class="services__title">Graphene Nano-composite</h3>
+                        <img src="Img/Frazier handle.PNG"  alt="" class="work__img">
+                        <h3 class="services__title">FRAZIER HANDLE</h3>
 
                         <span class="services__button">
                             Preview<i class='bx bxs-chevrons-right services__icon'></i>
                         </span>
-
+                        
                         <div class="services__modal">
                             <div class="services__modal-content">
                                 <i class='bx bxs-chevrons-left services__modal-close'></i>
 
-                                <h3 class="services__modal-title">Graphene Nano-composite</h3>
-                                
+                                <h3 class="services__modal-title">FRAZIER HANDLE</h3>
+
+                                <p class="services__modal-description">
+                                            Special Purpose Machine designed for pharma & medical product packing with precision thermoforming.
+                                        </p>
+
+                                <!-- GIF Preview -->
+                                <img src="Img/MFA.gif" alt="SPM GIF Preview" class="services__modal-img">
+                            </p>
+                        </li>
+
                                 <ul class="services__modal-list">
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
