--- a/index.html
+++ b/index.html
@@ -510,47 +510,37 @@
                         <li class="services__modal-item">
                             <i class='bx bx-chevron-right services__modal-icon'></i>
                             <p class="services__modal-info">
-                                Uses MediaPipe to track hand landmarks in real-time.
+                                Cost Estimation & Breaking down costs into material, labor, overhead, and other indirect costs, Estimating per unit cost and total production cost.
                             </p>
                         </li>
                         <li class="services__modal-item">
                             <i class='bx bx-chevron-right services__modal-icon'></i>
                             <p class="services__modal-info">
-                                Recognizes hand gestures for scrolling using OpenCV.
+                                Analyzing BOM to identify cost drivers, Working with engineering teams to update cost-related components.
                             </p>
                         </li>
                         <li class="services__modal-item">
                             <i class='bx bx-chevron-right services__modal-icon'></i>
                             <p class="services__modal-info">
-                                Maps gestures to system commands with PyAutoGUI for seamless control.
+                                Knowledge of machining, fabrication, injection molding, assembly, etc, Estimating costs for different manufacturing methods, Considering scrap, waste, and cycle times.
                             </p>
                         </li>
                         <li class="services__modal-item">
                             <i class='bx bx-chevron-right services__modal-icon'></i>
                             <p class="services__modal-info">
-                                Enables hands-free navigation of CAD models and documents.
+                                Understanding cost implications of design or material changes.
                             </p>
                         </li>
                         <li class="services__modal-item">
                             <i class='bx bx-chevron-right services__modal-icon'></i>
                             <p class="services__modal-info">
-                                Reduces input device switching, streamlining workflow and boosting efficiency.
+                                Implementing DFM (Design for Manufacturing) and DFA (Design for Assembly) strategies.
                             </p>
                         </li>
                     </ul>
-
-                    <!-- YouTube Video Embed -->
-                    <div class="video-container" style="margin-top: 1.5rem;">
-                        <iframe width="100%" height="315"
-                            src="https://www.youtube.com/embed/JUXjQ-1CJSE"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                        </iframe>
-                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
                     <div class="work__card mix product_design">
                         <img src="Img/Suction Irrigation Assembly.PNG"  alt="" class="work__img">
