--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                     </div>
 
     
-                    <div class="work__card mix product_design">
+                    <div class="work__card mix embedded_projects">
                         <img src="Img/Mold Design.PNG"  alt="" class="work__img">
                         <h3 class="services__title">TOOL ENGINEERING</h3>
 
@@ -768,7 +768,7 @@
                         </div>
                     </div>
 
-                    <div class="work__card mix embedded_projects">
+                    <div class="work__card mix product_design">
                         <img src="Img/PACKAGING THERMOFORMING TRAY.PNG"  alt="" class="work__img">
                         <h3 class="services__title">PACKAGING THERMOFORMING TRAY</h3>
 
@@ -822,7 +822,7 @@
                         </div>
                     </div>
 
-                    <div class="work__card mix embedded_projects">
+                    <div class="work__card mix product_design">
                         <img src="Img/Product design.PNG"  alt="" class="work__img">
                         <h3 class="services__title">PRODUCT DESIGN</h3>
 
@@ -840,28 +840,28 @@
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Creating a responsive plant marks an innovative breakthrough in horticulture.
+                                            Designed lock fittings for medical devices in accordance with ISO 594-2, ensuring secure and leak-proof connections between syringes and accessories.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            My model connects plants and humans, translating plant feelings into human voice.
+                                            Integrated 6% (Luer taper) conical fittings to enable interoperability with a wide range of standard medical devices, enhancing product versatility and user convenience.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Links to the internet to retrieve weather forecasts.
+                                            Applied ISO 594-2 guidelines to verify dimensional tolerances, ensuring consistent manufacturing quality and reliable locking mechanism performance.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Displays charming expressions corresponding to the weather.
+                                            Collaborated with quality assurance and regulatory teams to ensure the product meets both ISO 594-2:1998 and FDA/CE regulatory requirements.
                                         </p>
                                     </li>
 
@@ -997,10 +997,6 @@
                                 <i class='bx bxs-chevrons-left services__modal-close'></i>
 
                                 <h3 class="services__modal-title">FRAZIER HANDLE</h3>
-
-                                <p class="services__modal-description">
-                                            Special Purpose Machine designed for pharma & medical product packing with precision thermoforming.
-                                        </p>
 
                                 <!-- GIF Preview -->
                                 <img src="Img/MFA.gif" alt="SPM GIF Preview" class="services__modal-img">
