--- a/index.html
+++ b/index.html
@@ -834,7 +834,24 @@
                             <div class="services__modal-content">
                                 <i class='bx bxs-chevrons-left services__modal-close'></i>
 
+                                                                <ul class="services__modal-list">
+                                    <li class="services__modal-item">
+                                        <i class='bx bx-chevron-right services__modal-icon'></i>
+                                        <p class="services__modal-info">
+                                            Referance design images
+                                        </p>
+                                    </li>
+
                                 <h3 class="services__modal-title">PRODUCT DESIGN</h3>
+                                
+                                                                <!-- GIF Preview -->
+                                <img src="Img/ICU Medical Clave.JPG" alt="SPM GIF Preview" class="services__modal-img">
+                                </p>
+                                </li>
+                                                                <!-- GIF Preview -->
+                                <img src="Img/ICU Medical MicroClave.JPG" alt="SPM GIF Preview" class="services__modal-img">
+                                </p>
+                                </li>
                                 
                                 <ul class="services__modal-list">
                                     <li class="services__modal-item">
@@ -862,13 +879,6 @@
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
                                             Collaborated with quality assurance and regulatory teams to ensure the product meets both ISO 594-2:1998 and FDA/CE regulatory requirements.
-                                        </p>
-                                    </li>
-
-                                    <li class="services__modal-item">
-                                        <i class='bx bx-chevron-right services__modal-icon'></i>
-                                        <p class="services__modal-info">
-                                            Ideal desktop companion for enthusiasts of plants.
                                         </p>
                                     </li>
                                 </ul>
