--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                         <a href="https://www.linkedin.com/in/mithun-kumar-l-5b4789239/" target="_blank" class="home__social-link">
                             <i class='bx bxl-linkedin' ></i>
                         </a>
-                        <a href="https://github.com/KishoreEswar333" target="_blank" class="home__social-link">
+                        <a href="https://mithunkumarl.github.io/net-boot/#about" target="_blank" class="home__social-link">
                             <i class='bx bxl-github'></i>
                         </a>
-                        <a href="https://www.instagram.com/you_know_who_i_am_333/" target="_blank" class="home__social-link">
+                        <a href="https://www.instagram.com/mithun2236/" target="_blank" class="home__social-link">
                             <i class='bx bxl-instagram' ></i>
                         </a>
                     </div>
@@ -1106,9 +1106,9 @@
                             <div class="contact__card">
                                 <i class='bx bxl-instagram contact__card-icon' ></i>
                                 <h3 class="contact__card-title">Instagram</h3>
-                                <span class="contact__card-data">you_know_who_i_am_333</span>
+                                <span class="contact__card-data">mithun2236</span>
 
-                                <a href="https://www.instagram.com/you_know_who_i_am_333/" target="_blank" class="contact__button">
+                                <a href="https://www.instagram.com/mithun2236/" target="_blank" class="contact__button">
                                     Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                                 </a>
                             </div>
@@ -1161,7 +1161,7 @@
                 </ul>
 
                 <ul class="footer__social">
-                    <a href="https://www.instagram.com/you_know_who_i_am_333/" target="_blank" class="footer__social-link">
+                    <a href="https://www.instagram.com/mithun2236/" target="_blank" class="footer__social-link">
                         <i class='bx bxl-instagram' ></i>
                     </a>
 
