--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@
                         <i class='bx bxl-instagram' ></i>
                     </a>
 
-                    <a href="https://twitter.com/kishoreeswar369" target="_blank" class="footer__social-link">
+                    <a href="https://x.com/MithunkuL111998" target="_blank" class="footer__social-link">
                         <i class='bx bxl-twitter'></i>
                     </a>
 
