--- a/index.html
+++ b/index.html
@@ -969,35 +969,35 @@
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            -------------------------------------------------------------.
+                                            Remove unnecessary features (like fillets, holes, small details) to reduce complexity.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            -----------------------------------------------------------.
+                                            Assign accurate material data (Young’s modulus, Poisson’s ratio, yield strength, etc.).
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            ---------------------------------------------------------------.
+                                            Divide the model into finite elements, Ensure appropriate mesh density: finer mesh in high-stress regions, Perform mesh convergence study.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            ------------------------------------------------------------------.
+                                            Analyze results: stress, strain, displacement, factor of safety, etc. Create contour plots, graphs, animations, Identify critical areas (max stress, failure points).
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            -----------------------------------------------------.
+                                            Compare FEA results with hand calculations or experimental data.
                                         </p>
                                     </li>
                                 </ul>
@@ -1028,35 +1028,42 @@
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            -----------------------------------------------------.
+                                            To perform cool, flow and warp analysis and to evaluate the filling, packing and warpage characteristics of the part with POLYLAC PA-757(ABS) material.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            -----------------------------------------------------.
+                                            Calculating maximum Injection Pressure required to fill the part is 86.25 MPa.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            -----------------------------------------------------.
+                                            Calculating clamp force observed during molding : 5.813 tonne
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            -----------------------------------------------------.
+                                            Temperature rise and drop observed is within the permissible limit of the material. Melt temperature range 180-230 0C.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            -----------------------------------------------------.
+                                            Max Shear rate observed at the gate region and is below the permissible limit specified for the material. Max shear rate specified for the material is 50000/s.
+                                        </p>
+                                    </li>
+                                    
+                                    <li class="services__modal-item">
+                                        <i class='bx bx-chevron-right services__modal-icon'></i>
+                                        <p class="services__modal-info">
+                                            Deflection is scaled to 3 for clear observation. Deflection, All effects : 0.0171 mm to 0.2735 mm.
                                         </p>
                                     </li>
                                 </ul>
