--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h3 class="home__education">Mechanical Engineer|Product Design & Development Specialist</h3>
 
                         <div class="home__buttons">
-                            <a download="" href="Resume - november 2024/Mithun Kumar L resume.pdf" class="button button--ghost">
+                            <a download="" href="Resume - november 2024/Mithun_Mechanical_Engineer.pdf" class="button button--ghost">
                                 Download Resume
                             </a>
                             <a href="#about" class="button">About me</a>
